--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "core-js": "^3.3.2",
+    "joi-browser": "^13.4.0",
     "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.10.2",
