--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "core-js": "^3.3.2",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
