--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
